# T-Halow-P4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
AH-V1.6-SDK/: changelog.txt  readme.md  readme_cn.md
components/huge-ic-nonos-driver-v2.0.0-31919/: CMakeLists.txt  changelog.txt  hgic_bootdl.c  hgic_bootdl.h  hgic_sdspi.c  hgic_sdspi.h  hgic_sdspi_v1.cbak
components/private_library/: CMakeLists.txt  t_halow_p4_config.h
debug/display/: CMakeLists.txt
debug/display/main/: display.c  idf_component.yml
debug/halow_spi/main/: README.txt  hgic_bootdl.c  hgic_raw.c  hgic_sdspi.c  hgic_sdspi_v2.c  version.h
debug/iperf/: sdkconfig.defaults.esp32p4
debug/touch/: CMakeLists.txt
debug/touch/main/: idf_component.yml
debug/video_lcd_display/main/: idf_component.yml
esp-hosted-c6-Slave/main/: coprocessor_fw_version.h
examples/: README_CN.md
examples/camera_display/: CMakeLists.txt  sdkconfig.defaults
examples/camera_display/main/: CMakeLists.txt  camera_display.cpp  idf_component.yml
examples/camera_dsi/: sdkconfig.old
examples/display_esp_ui/: CMakeLists.txt  idf_component.yml  sdkconfig.defaults
examples/display_esp_ui/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/display_lvgl_v8_benchmark/: CMakeLists.txt  sdkconfig.defaults
examples/display_lvgl_v8_benchmark/main/: CMakeLists.txt  idf_component.yml  (+1 more)
examples/esp-hosted-c6-Slave/: sdkconfig
examples/factory_esp_brookesia_v8/: CMakeLists.txt  sdkconfig.defaults
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/: CMakeLists.txt  Kconfig.projbuild  apps.h
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/calculator/: Calculator.cpp  Calculator.hpp
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/camera/: Camera.cpp  Camera.hpp  app_pedestrian_detect.cpp
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/camera/assets/: img_camera.c
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/camera/ui/screens/: ui_ScreenCameraShot.c
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/game_2048/: Game_2048.cpp  Game_2048.hpp
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/setting/: Setting.cpp  Setting.hpp
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/wifi_halow/: Wifi_halow.cpp  Wifi_halow.hpp
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/wifi_halow/assets/: img_wifi_halow.c
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/wifi_halow/ui/: CMakeLists.txt  ui.c  ui.h
examples/factory_esp_brookesia_v8/components/esp_brookesia_app/wifi_halow/ui/screens/: ui_Screen1.c
examples/factory_esp_brookesia_v9/: sdkconfig.defaults
examples/factory_no_screen/: CMakeLists.txt
examples/halow_netif/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/halow_spi/: CMakeLists.txt
examples/halow_spi_single/: CMakeLists.txt
examples/halow_spi_single/components/huge-ic-nonos-driver-v2.0.0-31919/: CMakeLists.txt
examples/halow_spi_single/components/huge-ic-nonos-driver-v2.0.0-31919/demo/: hgic_sdspi_demo_stm32.c
examples/iperf/: sdkconfig.old
examples/rm69a10_lvgl/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  rm69a10_driver.cpp  rm69a10_driver.h
examples/touch/: sdkconfig  sdkconfig.defaults
hardware/: .$ESP32P4-Halow.drawio.bkp  .$ESP32P4-Halow.drawio.dtmp  ESP32P4-Halow.drawio
iperf/: sdkconfig
iperf/main/: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/examples/tx_ah_r900pnr/: main.cpp
main/examples/tx_ah_r900pnr_speed_test/: main.cpp
(+736 files in other folders)
